src/App.css
/* ... */
@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeIn-Mid {
  0% {
    opacity: 0.7;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeOut-Mid {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0.5;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.SmallContact {
  display: none;
}
.intro-name {
  height: 518px;
  color: #ffffff;
  font-family: Montserrat;
  font-weight: 900;
  text-transform: uppercase;
  margin-top: 150px;
  padding: 0;
  font-size: 90px;
  line-height: 50px;
}

.intro-subheading {
  height: 32px;
  opacity: 0.95;
  color: #ffffff;
  font-family: Lato;
  font-weight: 700;
  letter-spacing: 12px;
  text-transform: uppercase;
  font-weight: 700;
  margin-top: 30px;
  padding: 0;
  z-index: 1;
  font-size: 20px;
  text-shadow: 5px solid black;
}

.aboutme-content {
  background-color: rgb(62, 126, 179);
  margin-top: 30px;
  padding-top: 0px;
  padding-bottom: 30px;
  padding-left: 25px;
  padding-right: 25px;
}

.aboutme-box {
  display: flex;
  flex-direction: row;
  width: 45vw;
  margin-top: 28px;
  transition: 0.5s;
}

.resume-aboutme {
  text-align: center;
  margin-bottom: 0px;
  font-family: Lato;
  font-size: 18px;
  text-align: left;
  width: 25vw;
  margin-top: -8px;
  line-height: 22px;
  transition: 1s;
}

.scottkutler {
  margin-right: 35px;
  width: 218px;
  height: 255px;
  border: 5px solid black;
  margin-left: 10px;
}

.resume-container {
  justify-content: center;
  display: flex;
  text-align: center;
  flex-direction: column;
  z-index: -1;
  height: 1000px;
  width: 800px;
  background: rgb(16, 53, 93);
  background: radial-gradient(
    circle,
    rgba(16, 53, 93, 1) 11%,
    rgba(1, 18, 59, 1) 74%
  );
  border: 0px solid white;
}

.resume-embed {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
}

.intro-background-color {
  margin-bottom: 70px;
}

.mywork-header {
  animation: fadeIn ease 0.5s;
  -webkit-animation: fadeIn ease 0.5s;
  -moz-animation: fadeIn ease 0.5s;
  -o-animation: fadeIn ease 0.5s;
  -ms-animation: fadeIn ease 0.5s;
  color: #a4c2f4;
  text-align: center;
  font-size: 25px;
  margin-top: 40px;
  margin-bottom: -20px;
}

.contact-header {
  animation: fadeIn ease 0.5s;
  -webkit-animation: fadeIn ease 0.5s;
  -moz-animation: fadeIn ease 0.5s;
  -o-animation: fadeIn ease 0.5s;
  -ms-animation: fadeIn ease 0.5s;
  color: #a4c2f4;
  text-align: center;
  font-size: 25px;
  margin-top: 20px;
  margin-bottom: -10px;
}

.experience-header {
  animation: fadeIn ease 0.5s;
  -webkit-animation: fadeIn ease 0.5s;
  -moz-animation: fadeIn ease 0.5s;
  -o-animation: fadeIn ease 0.5s;
  -ms-animation: fadeIn ease 0.5s;
  color: #a4c2f4;
  text-align: center;
  font-size: 25px;
  margin-top: 20px;
}

.skill-header {
  animation: fadeIn ease 0.5s;
  -webkit-animation: fadeIn ease 0.5s;
  -moz-animation: fadeIn ease 0.5s;
  -o-animation: fadeIn ease 0.5s;
  -ms-animation: fadeIn ease 0.5s;
  color: #a4c2f4;
  text-align: center;
  font-size: 25px;
  margin-top: -30px;
  margin-bottom: -15px;
}

.aboutme-header {
  animation: fadeIn ease 0.5s;
  -webkit-animation: fadeIn ease 0.5s;
  -moz-animation: fadeIn ease 0.5s;
  -o-animation: fadeIn ease 0.5s;
  -ms-animation: fadeIn ease 0.5s;
  color: #a4c2f4;
  text-align: center;
  font-size: 25px;
  font-family: Lato;
  margin-top: -20px;
  margin-bottom: -20px;
  display: none;
}

.about-flex-grid {
  display: flex;
  justify-content: space-between;
  width: 60vw;
  margin-top: 30px;
}

.about-h4-left {
  text-align: center;
  margin-top: -10px;
  margin-bottom: -40px;
  text-decoration: underline;
  font-family: Lato;
  color: #a4c2f4;
}

.about-h5-left {
  text-align: center;
  line-height: 20px;
  margin-bottom: 35px;
  font-family: Lato;
}

.about-h4-right {
  text-align: center;
  margin-top: -10px;
  margin-bottom: -45px;
  color: #a4c2f4;
  text-decoration: underline;
  font-family: Lato;
}
.about-h5-right {
  text-align: center;
  line-height: 20px;
  margin-bottom: 15px;
  font-family: Lato;
}

.col1 {
  width: 20%;
  margin-left: 30px;
}

.col2 {
  margin-left: -120px;
  margin-right: -120px;
}

.col3 {
  width: 20%;
  margin-right: 30px;
}

.col2,
.about-wordcloud {
  display: flex;
  justify-content: center;
  text-align: center;
  align-items: center;
  width: 70%;
}

.col2 {
  margin-top: -10px;
}
.resume-flex-grid {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: 35px;
  margin-bottom: 50px;
}

.NavBar {
  width: 100vw;
  position: fixed;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  display: inline-block;
  background-color: black;
  z-index: 100;
}

.navbar-component-container {
  background-color: transparent;
  color: #a4c2f4;
  text-align: center;
  margin: 20px auto 20px auto;
  text-decoration: none;
  font-family: Lato;
  display: flex;
  flex-direction: row;
  justify-content: center;
  font-size: 15px;
  animation: fadeIn ease 1s;
  -webkit-animation: fadeIn ease 1s;
  -moz-animation: fadeIn ease 1s;
  -o-animation: fadeIn ease 1s;
  -ms-animation: fadeIn ease 1s;
}

.navbar-component-links {
  margin-left: 30px;
  margin-right: 30px;
  transition: 0.25s;
  font-weight: 800;
  font-family: Lato;
  text-align: center;
}

.navbar-component-links:hover {
  color: #8bbdff;
  font-weight: 900;
}

a {
  text-decoration: none;
  color: white;
}

h3,
h1 {
  font-family: Lato;
  color: #a4c2f4;
}

html {
  scroll-behavior: smooth;
}

@media only screen and (max-width: 1500px) {
  .portfolio-container-main {
    row-gap: 15px;
    margin-top: 50px;
    display: grid;
    grid-template-rows: 6;
    grid-template-columns: 3;
    grid-template-areas:
      "header header header   "
      "footer footer footer   ";
  }
}
/* ... */

